--- a/ReadMe
+++ b/ReadMe
@@ -1,6 +1,1 @@
-1.You must define LEVELDB_DLL in your project if you use leveldb as a dll.
-2.If your windows version is lower than 6.0(windows vista),you should undefine the USE_VISTA_API micro in port_win32.h.
-3.Leveldbwin may be not stable now ,so it is not suggested to use leveldbwin in your project.
-4.Modification in leveldb code :
-	1) including path in some headers.
-	2) delete some useless platform files.
+code anotaion for reading c++ leveldb. you could import it in to vs2008. sln file is at path: build\msvc9
